--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: psyvern/add-header-action@v0.6
         with:
           source: action.yml
-          filter: *
+          filter: "*"
       - uses: actions/upload-artifact@v3
         with:
           name: boi
