--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "minimatch": "^5.1.0",
-    "recursive-readdir": "^2.2.3"
+    "@actions/glob": "^0.3.0"
   }
 }
